--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,11 @@
 {
-  "compilerOptions": {
-      "module": "commonjs",
-      "target": "ES5",
-      "outDir": "ts-built",
-      "rootDir": "src"
-  }
+  "files": [],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    },
+    {
+      "path": "./tsconfig.app.json"
+    }
+  ]
 }
