--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "pinia": "^2.1.6",
+    "v-network-graph": "^0.9.8",
     "vue": "^3.3.4",
     "vue3-tabs-component": "^1.3.6"
   },
