--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "ajv": "^8.12.0",
     "pinia": "^2.1.6",
     "v-network-graph": "^0.9.8",
     "vue": "^3.3.4",
