--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "pinia": "^2.1.6",
     "v-network-graph": "^0.9.8",
     "vue": "^3.3.4",
-    "vue3-tabs-component": "^1.3.6"
+    "vue3-tabs-component": "^1.3.6",
+    "vuetify": "^3.3.20"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
